# loyverse-api

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
loyverse/: api.py  database.py  schemas.py
tests/: test_customer.py  test_employee.py  test_item.py  test_receipt.py  test_variant.py
